Fix height overflow

--- a/src/styles/sp-body.module.css
+++ b/src/styles/sp-body.module.css
@@ -4,13 +4,12 @@
 
 .graph {
   min-height: 400px;
-  height: 90vh;
   min-width: 400px;
   width: 100%;
 }
 
 .graphinner {
   width: 100%;
-  height: 100%;
+  height: 85vh;
   padding: 0 40px 20px 0;
 }
